--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <div class="container">
       <p id="result"></p>
     </div>
+    <p id="console"></p>
 
     <script src="script.js"></script>
   </body>
