--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#009578" />
-    <title>PWA</title>
+    <title>DICE ROLLER</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,6 +19,8 @@
   <body>
     <div class="container">
       <h1>DICE ROLLER</h1>
+      <br />
+      <button id="notifyButton">Notify me!</button>
     </div>
     <br />
     <br />
@@ -55,7 +57,9 @@
     <div class="container">
       <p id="result"></p>
     </div>
-    <p id="console"></p>
+    <div class="container">
+      <p id="console"></p>
+    </div>
 
     <script src="script.js"></script>
   </body>
