--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <div class="container">
       <h1>DICE ROLLER</h1>
       <br />
-      <button id="notifyButton">Notify me!</button>
+      <button id="notifyButton">
+        <img
+          style="height: 40px; width: auto"
+          src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/64/000000/external-notification-user-interface-kmg-design-detailed-outline-kmg-design.png"
+        />
+      </button>
     </div>
     <br />
     <br />
