--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <div class="container">
       <h1>DICE ROLLER</h1>
-      <br />
+    </div>
+    <br />
+    <div class="container" style="justify-content: flex-end">
       <button id="notifyButton">
         <img
           style="height: 40px; width: auto"
@@ -27,7 +29,6 @@
         />
       </button>
     </div>
-    <br />
     <br />
     <br />
     <br />
