--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <div class="container" style="justify-content: flex-end">
       <button id="notifyButton">
         <img
-          style="height: 40px; width: auto"
+          style="
+            height: 40px;
+            width: auto;
+            position: absolute;
+            margin-top: -85px;
+          "
           src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/64/000000/external-notification-user-interface-kmg-design-detailed-outline-kmg-design.png"
         />
       </button>
@@ -32,7 +37,7 @@
     <br />
     <br />
     <br />
-    <div class="container" style="height: 40vh">
+    <div class="container" style="height: 30vh">
       <img id="dice" src="" style="display: none" />
       <img
         id="rollingDice"
