--- a/index.html
+++ b/index.html
@@ -17,23 +17,19 @@
     <link rel="apple-touch-icon" href="icons/manifest-icon-192.maskable.png" />
   </head>
   <body>
-    <div class="container">
-      <h1>DICE ROLLER</h1>
-    </div>
-    <br />
     <div class="container" style="justify-content: flex-end">
       <button id="notifyButton">
         <img
-          style="
-            height: 40px;
-            width: auto;
-            position: absolute;
-            margin-top: -85px;
-          "
+          style="height: 40px; width: auto"
           src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/64/000000/external-notification-user-interface-kmg-design-detailed-outline-kmg-design.png"
         />
       </button>
     </div>
+    <div class="container">
+      <h1>DICE ROLLER</h1>
+    </div>
+    <br />
+
     <br />
     <br />
     <br />
