--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container" style="justify-content: flex-end">
       <button id="notifyButton">
         <img
-          style="height: 40px; width: auto"
+          style="height: 40px; width: auto; margin-right: -10vh"
           src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/64/000000/external-notification-user-interface-kmg-design-detailed-outline-kmg-design.png"
         />
       </button>
