--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/64/000000/external-notification-user-interface-kmg-design-detailed-outline-kmg-design.png"
         />
       </button>
+      <p id="batteryLevel"></p>
     </div>
     <div class="container">
       <h1>DICE ROLLER</h1>
